# caffe-builder

./: CMakeLists.txt  README.md  build_vs2022_x64.cmd
cmake/: buildem_boost_recipe.cmake  buildem_cmake_recipe.cmake  buildem_download_package.cmake
cmake/modules/: FindMKL.cmake  FindOpenBLAS.cmake  FindProtobuf.cmake  FindZLIB.cmake
cudnn/: cuDNNInstall.cmake
